--- a/site/stylesheets/scss/styles.scss
+++ b/site/stylesheets/scss/styles.scss
@@ -233,7 +233,7 @@ ul.link-list li li  ul.link-sublist {
         top: 70px;
         z-index: 999;
         margin:0;
-        padding:0;
+        padding-left:20px;
         display: block;
         font-family:$Lato;
         font-size: $font_size_18px;
